# jardim-gis

./: Dockerfile  README.md  ROTAS.md  jardimgis.py  makefile  pyproject.toml  requirements.txt
app/: __init__.py
app/routes/web/: web.py
app/static/css/pages/arvores/: controle_arvores.css
app/static/js/pages/arvores/: editar_controle_arvores.js
app/templates/: index.html
app/templates/base/: erro_acesso_negado.html  erro_interno.html  erro_pagina_nao_encontrada.html
scripts/: config.sh  deploy.sh  jardim_gis.service  jardimgis.service  run.sh
